--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
   <section>
     <h2>Contact</h2>
-    <p>Email: <a href="mailto:sunitypanchal@gmail.com">sunitypanchal@gmail.com</a></p>
+    <p>Email: <a href="mailto:mandar.bhavsar1@gmail.com">mandar.bhavsar1@gmail.com</a></p>
     <p>LinkedIn: <a href="https://www.linkedin.com/in/mandarbhavsar/" target="_blank">mandarbhavsar</a></p>
   </section>
 
